<resources>
    <string name="app_name">沙田IVE-Grove</string>
    <string name="title_activity_menu" translatable="false">Grove Sandwiches</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_order" translatable="false">OrderActivity</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="username_max_10_word">Username (Max 10 word)</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="office">office</string>
    <string name="phone">phone</string>
    <string name="sign_out">Sign_out</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email_and_reset_password">Send email and reset password</string>
    <string name="your_email_address">Your Email Address</string>

</resources>
