<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/order" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_geo"
                android:icon="@drawable/ic_location_on_black_24dp"
                android:title="@string/office" />
            <item
                android:id="@+id/nav_phone"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/phone" />
            <item
                android:id="@+id/nav_git"
                android:icon="@drawable/ic_device_hub_black_24dp"
                android:title="GITHUB" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/sign_out" />

        </menu>
    </item>

</menu>
